--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aniamted-photo-page-transition",
+  "name": "model-agency",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
